--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -54,7 +54,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: "Palatino", "Georgia",  serif;
+  font-family: "Georgia",  serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
