--- a/theme.css
+++ b/theme.css
@@ -11,7 +11,7 @@ body {
 	padding-bottom: 10px;
 	margin-top: 15px;
 	margin-bottom: 15px;
-	background-color: #cccccc;
+	background-color: #eeeeee;
 	border-radius: 8px;
 }
 
