--- a/theme.css
+++ b/theme.css
@@ -27,7 +27,16 @@ body {
 	border-radius: 8px;
 }
 
-.photo {
+.bio {
+	padding-top: 10px;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-bottom: 10px;
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
+
+.intro {
 	width: 150px;
 	text-align: center;
 	margin-right: 20px;
